@@ -1,0 +1,7 @@
+log4perl.category = WARN, Logfile
+log4perl.appender.Logfile          = Log::Log4perl::Appender::File
+log4perl.appender.Logfile.filename = test.log
+log4perl.appender.Logfile.layout   = Log::Log4perl::Layout::PatternLayout
+log4perl.appender.Logfile.layout.ConversionPattern = %d %F{1} %L> %m %n
+
+log4perl.category = TRACE, Logfile
